Revision history for WWW-Kickstarter

1.6.0   ~~~~-~~-~~
        - ~~~

1.4.0   2014-10-07
        - Always round progress down to avoid saying a project is 100% funded before it is.
        - $project->goal and $project->pledged aren't in USD as documented.
          Fixed the documentation and added $project->currency.
        - Kickstarter's "launch_date" sort order changed. It now sorts by ascending launch date.
          Use sort order "newest" to projects sorted by descending launch date.
          $ks->projects_recently_launched was adjusted to return the newest first again.

1.2.0   2014-02-18
        - Urls to fetch projects were being built incorrectly.

1.0.0   2014-02-15
        - Initial version
          Accounts for the backwards-incompatible changes to the API of December 2013.