@@ -1,6 +1,9 @@
 Revision history for WWW-Kickstarter
 
 1.6.0   ~~~~-~~-~~
+        - $project->category_id is deprecated. Use $project->category->id instead.
+        - $project->category_name is deprecated. Use $project->category->name instead.
+        - Added $project->category.
         - ~~~
 
 1.4.0   2014-10-07
